--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: defectdojo-upload:latest
 
 jobs:
   build-and-push-image:
@@ -38,5 +38,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
